# rust_educational_no_recoil

./: CMakeLists.txt  README.md  script.lua
.github/workflows/: build.yml
src/: app.cpp  app.h  compensation.cpp  compensation.h  data.h  debug.cpp  debug.h  hook.cpp  hook.h  main.cpp  ui.cpp  ui.h
